# VideoLingo

./: ARCHITECTURE_LAYERING_DESIGN.md  INSTALL_GUIDE.md  TextSplitter_重构总结.md  install_uv.py  pyproject.toml  st.py  模块化重构技术总结.md
.cursor/rules/: refactoring.mdc
analysis_reports/: 01_Project_Overview.md  02_Code_Structure.md  03_Functionality_Map.md  04_Dependency_Analysis.md  05_Code_Quality_Assessment.md  06_Key_Algorithms_Data_Structures.md  07_Function_Call_Graph.md  08_Security_Analysis.md  09_Extensibility_Performance.md  10_Summary_Recommendations.md
core/: _5_split_sub.py
core/spacy_utils/: split_by_mark.py
core/st_utils/: download_video_section.py
core/tts_backend/: sf_fishtts.py
core/utils/: delete_retry_dubbing.py
modules/: README.md  __init__.py  audio_synthesizer.py  audio_transcriber.py  content_summarizer.py  simple_test.py  subtitle_generator.py  test_modules.py  text_splitter.py  text_translator.py  video_composer.py  video_downloader.py
modules/asr_backend/: __init__.py  audio_separator.py  base.py  factory.py  utils.py
modules/asr_backend/adapters/: __init__.py  elevenlabs_adapter.py  whisperx_302_adapter.py  whisperx_local_adapter.py
modules/common_utils/: paths.py
modules/commons/: logger.py  paths.py
modules/config/: manager.py  utils.py
modules/configs/: __init__.py  models.py
modules/download_backend/: README.md  __init__.py  base.py  config.py  downloader.py  example.py  exceptions.py  factory.py  manager.py  models.py  utils.py
modules/download_backend/adapters/: __init__.py  bilibili_adapter.py  generic_adapter.py  youtube_adapter.py
modules/gpt/: __init__.py  cache.py  client.py  config.py  models.py
modules/gpts/: __init__.py  config.py  exceptions.py
modules/prompts/: __init__.py  base.py  subtitle_align.py  summary.py  text_split.py  translation.py
modules/text_splitter/: README.md  __init__.py  core.py  hybrid_splitter.py  nlp_splitter.py  semantic_splitter.py
modules/text_splitter/split_spacy/: __init__.py  exceptions.py  splitter.py
modules/text_splitter/split_spacy/core/: config.py  result.py  runtime.py  splitter.py
modules/text_splitter/split_spacy/strategies/: __init__.py  base_splitter.py  comma_splitter.py  connector_splitter.py  mark_splitter.py  root_splitter.py
modules/tts_backend/: README.md  __init__.py  base.py  config.py  example_usage.py  factory.py  utils.py
modules/tts_backend/adapters/: __init__.py  azure_tts_adapter.py  custom_tts_adapter.py  edge_tts_adapter.py  f5tts_adapter.py  fish_tts_adapter.py  gpt_sovits_adapter.py  openai_tts_adapter.py  sf_cosyvoice2_adapter.py  sf_fish_tts_adapter.py
my_scripts/: .gitignore  1_download_demo.py  2_AudioTranscriber_demo.py  3_TextSplitterSpacy_demo.py  3_TextSplitter_demo.py  4_TextSplitter_demo.py  AudioTranscriber_demo.py  config_demo.py  gpt_demo.py  spacy_demo.py  tts_demo.py
